syntax = "proto3";

package pb;

option go_package = "github.com/yushk/sport_backend/manager/pb;pb";

message SportType {
    string id = 1;
    string label = 2;
    string code = 3;
}

service SportTypeManager {
    rpc CreateSportType(CreateSportTypeRequest) returns (SportType) {}
    rpc GetSportType(GetSportTypeRequest) returns (SportType) {}
    rpc UpdateSportType(UpdateSportTypeRequest) returns (SportType) {}
    rpc DeleteSportType(DeleteSportTypeRequest) returns (SportType) {}
    rpc GetSportTypes(GetSportTypesRequest) returns (GetSportTypesReply) {}
}

message CreateSportTypeRequest {
    SportType data = 1;
}

message GetSportTypeRequest {
    string id = 1;
}

message UpdateSportTypeRequest {
    string id = 1;
    SportType data = 2;
}

message DeleteSportTypeRequest {
    string id = 1;
}

message GetSportTypesRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetSportTypesReply {
    int64 total_count = 1;
    repeated SportType items = 2;
}